Make GeoPos.toString locale-independent